[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Fonts/Snowday.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Card/Card.gd" type="Script" id=2]
[ext_resource path="res://assets/Card/check_grey.png" type="Texture" id=4]
[ext_resource path="res://assets/Card/background_text.png" type="Texture" id=5]
[ext_resource path="res://assets/Card/x_grey.png" type="Texture" id=6]
[ext_resource path="res://assets/Card/check_green.png" type="Texture" id=7]
[ext_resource path="res://assets/Card/x_red.png" type="Texture" id=8]

[node name="CardBase" type="Node2D"]
z_index = 500
script = ExtResource( 2 )

[node name="Card" type="Sprite" parent="."]
position = Vector2( 500, 250 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="CheckButton" type="TextureButton" parent="."]
margin_left = 575.0
margin_top = 350.0
margin_right = 625.0
margin_bottom = 400.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XButton" type="TextureButton" parent="."]
margin_left = 390.0
margin_top = 350.0
margin_right = 440.0
margin_bottom = 400.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLabel" type="Label" parent="."]
margin_left = 375.0
margin_top = 200.0
margin_right = 630.0
margin_bottom = 214.0
grow_vertical = 2
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.317647, 0.254902, 0.254902, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Limitar Comercios"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="ready" from="CheckButton" to="." method="_on_CheckButton_ready"]
[connection signal="pressed" from="XButton" to="." method="_on_XButton_pressed"]
[connection signal="ready" from="XButton" to="." method="_on_XButton_ready"]
